# wg_display_embedded_test

./: .gitmodules  README.md
.github/workflows/: build_release.yml  pages.yml
docs/: _config.yml  index.md  manifest.json
widget/: Cargo.toml
widget/src/: lib.rs
