[package]
name = "widget"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.53.1", default-features = false, features = ["macros", "realloc"] }
dlmalloc = { version = "0.2.11", features = ["global"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = {version = "1.0.149", default-features = false, features = ["alloc"] }
schemars = { version = "1.2.1", default-features = false, features = ["derive"] }
